<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5EAC7ED"
    tools:context=".PersonalFragment">

    <TextView
        android:id="@+id/tvPersonalData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/personal_data"
        android:textColor="#0B0A0A"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvStuName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553" />

    <EditText
        android:id="@+id/edStuName"
        android:layout_width="363dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/black"
        android:hint="@string/enter_a_student_name"
        android:paddingHorizontal="15dp"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/tvStuAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvStuName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginStart="116dp"
        android:text="@string/student_name"
        android:textColor="#0B0A0A"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/edStuName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edStuAddress"
        android:layout_width="351dp"
        android:layout_height="53dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:hint="@string/enter_a_student_address"
        android:paddingHorizontal="15dp"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvStuAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/student_address"
        android:textColor="#0B0A0A"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/edStuAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="341dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginBottom="180dp"
        android:backgroundTint="@color/white"
        android:text="@string/next"
        android:textColor="#88000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>


